# parattice

./: .travis.yml  Cargo.toml  README-crate.md  README.md
bindings/cpp/: CMakeLists.txt
bindings/cpp/include/: CMakeLists.txt  parattice.hh
bindings/cpp/test/: CMakeLists.txt  lattice_kmp_test.cc  parattice_test.cc
bindings/jni/: .gitignore  build.gradle  settings.gradle
bindings/jni/src/main/cpp/: Lattice.cc  LatticeKMP.cc  NativeLibrary.cc  PaRattice.cc  internal.hh
bindings/jni/src/main/java/parattice/: Lattice.java  LatticeKMP.java  PaRattice.java  Pair.java  SearchIndexNode.java
bindings/jni/src/main/java/parattice/internal/: JNILoader.java
bindings/jni/src/test/java/parattice/: LatticeKMPTest.java  PaRatticeTest.java
examples/: README.md
examples/clojure/: project.clj
examples/clojure/src/parattice/example/: main.clj
examples/cpp/: CMakeLists.txt  parattice_example.cc
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
src/: externs.rs  lattice.rs  lattice_kmp.rs  lattice_searcher.rs  lib.rs  parattice.rs  utils.rs
tests/: lattice_kmp.rs  parattice.rs
