[package]
name = "parattice"
version = "0.2.2"
authors = ["Koichi Akabe <akabe@xcoo.jp>"]
edition = "2018"
description = "Recursive paraphrase lattice generator"
readme = "README-crate.md"
repository = "https://github.com/chrovis/parattice/"
license = "Apache-2.0"
license-file = "LICENSE"
keywords = ["nlp", "paraphrase"]
categories = ["text-processing"]
exclude = [
    ".gitignore",
    ".travis.yml",
    "bindings",
    "examples",
    "README.md",
]

[dependencies]
libc = "0.2.71"

[lib]
name = "parattice"
crate-type = ["rlib", "cdylib", "staticlib"]

[profile.release]
codegen-units = 1
